--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
           <h1>Hihat</h1>
           <button data-track="0" class="mute hihat-volume"><i class="fas fa-volume-mute"></i></i></button>
           <select name="hihat-select" id="hihat-select">
-            <option value="./sounds/hihat-808.wav">808 Hihat</option>
             <option value="./sounds/hihat-acoustic01.wav">Acoustic Hihat 1</option>
             <option value="./sounds/hihat-acoustic02.wav">Acoustic Hihat 2</option>
+            <option value="./sounds/hihat-808.wav">808 Hihat</option>
           </select>
         </div>
         <div class="hihat">
@@ -75,6 +75,10 @@
         </div>
       </div>
       <button class="play">Play</button>
+      <div class="tempo">
+        <input type="range" class="tempo-slider" max="300" min="20" value="150">
+        <p>Tempo: <span class="tempo-nr">150</span></p>
+      </div>
     </div>
     <audio src="./sounds/kick-classic.wav" class="kick-sound"></audio>
     <audio src="./sounds/snare-acoustic01.wav" class="snare-sound"></audio>
